Make 'Logout' text in Logout navbar button hidden on xs screens
#9834 - C2S v2 :: Mobile device :: Logout Button & Logos Wrap To Multiple Lines On Smaller Screens

--- a/client/app/layout/topNavbar.html
+++ b/client/app/layout/topNavbar.html
@@ -7,7 +7,7 @@
                     <span pp-minimaliza-sidebar togglesidebar="AppVm.toggleSideBar()"></span>
                 </div>
                 <div class="pull-right">
-                    <div class="inline m-r">
+                    <div class="m-t-sm m-b-sm m-r inline">
                         <mhc-oauth-logout></mhc-oauth-logout>
                     </div>
 
