Remove showHealthInformationMenu variable and make Health Information always visible in side nav bar
#9745 - C2S v2 :: Patient Portal :: 'Health Information' does not appear in the left side navigation until the user clicks on the 'My Health Information' button on the home page.

--- a/client/app/layout/navigation.html
+++ b/client/app/layout/navigation.html
@@ -25,7 +25,7 @@
                 <a ui-sref="fe.activity.list"><i class="fa fa-clock-o"></i> <span class="nav-label">Activity History</span></a>
             </li>
 
-             <li ng-class="{active: $state.includes('fe.patient')}" ng-if="AppVm.healthInformationMenu" ng-click="AppVm.routeToHealthInformation()"  >
+             <li ng-class="{active: $state.includes('fe.patient')}" ng-click="AppVm.routeToHealthInformation()"  >
                 <a ui-sref="fe.patient.healthinformation"><i class="fa fa-user-md"></i> <span class="nav-label">Health Information</span></a>
             </li>
         </ul>
