--- a/client/app/layout/navigation.html
+++ b/client/app/layout/navigation.html
@@ -1,31 +1,32 @@
-<nav class="navbar-default navbar-static-side fix-sidebar" role="navigation" >
+<nav class="navbar-default navbar-static-side fix-sidebar" role="navigation">
     <div class="sidebar-collapse">
         <ul pp-side-navigation class="nav" id="side-menu">
             <li class="nav-header">
                 <pp-profile-menu></pp-profile-menu>
             </li>
 
-            <li ui-sref-active="active" >
+            <li ui-sref-active="active">
                 <a ui-sref="fe.index.home"><i class="fa fa-home"></i> <span class="nav-label">Home</span></a>
             </li>
 
-            <li ng-class="{active: $state.includes('fe.consent')}" >
+            <li ng-class="{active: $state.includes('fe.consent')}">
                 <a ui-sref="fe.consent.list"><i class="fa fa-file-text"></i> <span class="nav-label">Consents</span></a>
             </li>
 
-            <li ng-class="{active: $state.includes('fe.provider')}" >
+            <li ng-class="{active: $state.includes('fe.provider')}">
                 <a ui-sref="fe.provider.list"><i class="fa fa-user-md"></i> <span class="nav-label">Providers</span></a>
             </li>
 
-            <li ng-class="{active: $state.includes('fe.medicaldocuments')}" >
+            <li ng-class="{active: $state.includes('fe.medicaldocuments')}">
                 <a ui-sref="fe.medicaldocuments.info"><i class="fa fa-folder-open"></i> <span class="nav-label">Medical Documents</span></a>
             </li>
 
-            <li ng-class="{active: $state.includes('fe.activity')}" >
-                <a ui-sref="fe.activity.list"><i class="fa fa-clock-o"></i> <span class="nav-label">Activity History</span></a>
+            <li ng-class="{active: $state.includes('fe.activity')}">
+                <a ui-sref="fe.activity.list"><i class="fa fa-clock-o"></i> <span
+                        class="nav-label">Activity History</span></a>
             </li>
 
-             <li ng-class="{active: $state.includes('fe.patient')}" ng-click="AppVm.routeToHealthInformation()"  >
+            <li ng-class="{active: $state.includes('fe.patient')}">
                 <a ui-sref="fe.patient.healthinformation"><i class="fa fa-user-md"></i> <span class="nav-label">Health Information</span></a>
             </li>
         </ul>
