More HTML and style edits to redesign action buttons. Remove header text.
#9976 - As a developer, I will have implemented an interface feature to publish CCD documents to HIEOS

--- a/client/less/Main.less
+++ b/client/less/Main.less
@@ -856,6 +856,11 @@ body.ng-scope.pace-done.grey{
 
 
 /* GENERAL*/
+.mini-Label {
+  border-right: thin solid @pp-light-gray;
+  padding-right: 5px;
+}
+
 .wrap {
   background-color: #f3f3f4;
   padding: 10px 20px;
