Override style.css styles for mini-navbar to correct navbar display.
Bug 9437 :C2S v2 :: Mobile device :: home button is covered and not display

--- a/client/less/Main.less
+++ b/client/less/Main.less
@@ -1,3 +1,15 @@
+/* necessary OVERRIDES to INSPINIA STYLE SHEET */
+
+.nav-header {
+  padding: 22px 0 30px !important;
+}
+body.mini-navbar .nav-header {
+  padding: 22px 0 40px !important;
+  background-color: #2f4050 !important;
+}
+
+/* end of INSPINIA OVERRIDES */
+
 .healthInfo {
   table {
     width: 100%;
