Make edits to HTML to make Bootlint compliant. In progress.
#10469: As a developer, I will verify proper usage of bootstrap on all pages in all states and fix errors.

--- a/client/app/layout/topNavbar.html
+++ b/client/app/layout/topNavbar.html
@@ -1,5 +1,5 @@
 
-<nav class="navbar navbar-fixed-top height-55 gray-bg border-bottom" role="navigation" style="margin-bottom: 0;" ng-class="{'margin-left-220': AppVm.togglebar}">
+<nav class="navbar navbar-fixed-top height-55 gray-bg border-bottom m-b-none" role="navigation" ng-class="{'margin-left-220': AppVm.togglebar}">
     <div class="container-fluid">
         <div class="row ">
             <div class="col-sm-12">
@@ -12,7 +12,7 @@
                     </div>
 
                     <div class="m-t-sm m-b-sm m-r inline">
-                        <img class="hidden-xs" src="assets/img/c2s.png" alt="c2s logo">
+                        <img class="hidden-xs" src="assets/img/c2s.png" alt="Consent 2 Share">
                         <img class="visible-xs-inline" src="assets/img/c2s_xs.png" alt="c2s logo">
                     </div>
 
