Contiinued edits to HTML files in Patient Portal to make Bootlint compliant. In progress.
#10469: As a developer, I will verify proper usage of bootstrap on all pages in all states and fix errors.

--- a/client/less/Main.less
+++ b/client/less/Main.less
@@ -194,6 +194,7 @@ body.mini-navbar .nav-header {
 @pp-light-gray: #E4E4E4;
 @pp-gray: #cccccc;
 @pp-medium-gray: #b3b3b3;
+@pp-b9-gray: #b9b9b9;
 @pp-dark-gray: #333333;
 @pp-dark-green: #256357;
 @pp-teal: #31A578;
@@ -751,6 +752,10 @@ body.ng-scope.pace-done.grey{
   background-color: @pp-medium-gray;
 }
 
+.b9gray-bg {
+  background-color: @pp-b9-gray;
+}
+
 .lightGrayAlpha-bg {
   background-color: rgba(204,204,204,.6);
 }
@@ -948,7 +953,7 @@ body.ng-scope.pace-done.grey{
 }
 
 .p-none {
-  padding: 0;
+  padding: 0 !important;
 }
 .side-padding0 {
   .side-padding(0px) !important;
