Add prefix c2s in layout module
#10703 - As a developer, I will complete rebranding changes in code (front-end code)

--- a/client/app/layout/navigation.html
+++ b/client/app/layout/navigation.html
@@ -1,8 +1,8 @@
 <nav class="navbar-default navbar-static-side fix-sidebar" role="navigation">
     <div class="sidebar-collapse">
-        <ul pp-side-navigation class="nav" id="side-menu">
+        <ul c2s-side-navigation class="nav" id="side-menu">
             <li class="nav-header">
-                <pp-profile-menu></pp-profile-menu>
+                <c2s-profile-menu></c2s-profile-menu>
             </li>
 
             <li ui-sref-active="active">
