--- a/client/app/layout/topNavbar.html
+++ b/client/app/layout/topNavbar.html
@@ -4,7 +4,7 @@
         <div class="row ">
             <div class="col-sm-12">
                 <div class="navbar-header">
-                    <span pp-minimaliza-sidebar togglesidebar="AppVm.toggleSideBar()"></span>
+                    <span c2s-minimaliza-sidebar togglesidebar="AppVm.toggleSideBar()"></span>
                 </div>
                 <div class="pull-right">
                     <div class="m-t-sm m-b-sm m-r inline">
