--- a/client/app/layout/directives/iBoxTools.html
+++ b/client/app/layout/directives/iBoxTools.html
@@ -1,4 +1,7 @@
-<div class="ibox-tools dropdown" dropdown >
-   <span class="badge green-white badge-primary badge-icon" ng-bind="iboxToolVm.total"></span>
-    <a ng-click="iboxToolVm.toggleCollapsed()" aria-label="open close chevron"> <i class="fa" ng-class="{'fa-chevron-up': !iboxToolVm.c2sCollapsed, 'fa-chevron-down': iboxToolVm.c2sCollapsed}"></i></a>
+<div class="ibox-tools dropdown" dropdown>
+    <span class="badge green-white badge-primary badge-icon" ng-bind="iboxToolVm.total"></span>
+    <a ng-click="iboxToolVm.toggleCollapsed()" aria-label="open close chevron">
+        <i class="fa"
+           ng-class="{'fa-chevron-up': !iboxToolVm.c2sCollapsed, 'fa-chevron-down': iboxToolVm.c2sCollapsed}"></i>
+    </a>
 </div>
