--- a/client/app/layout/navigation.html
+++ b/client/app/layout/navigation.html
@@ -4,30 +4,41 @@
             <li class="nav-header">
                 <c2s-profile-menu></c2s-profile-menu>
             </li>
-
             <li ui-sref-active="active">
-                <a ui-sref="fe.index.home"><i class="fa fa-home"></i> <span class="nav-label">Home</span></a>
+                <a ui-sref="fe.index.home">
+                    <i class="fa fa-home"></i>
+                    <span class="nav-label">Home</span>
+                </a>
             </li>
-
             <li ng-class="{active: $state.includes('fe.consent')}">
-                <a ui-sref="fe.consent.list"><i class="fa fa-file-text"></i> <span class="nav-label">Consents</span></a>
+                <a ui-sref="fe.consent.list">
+                    <i class="fa fa-file-text"></i>
+                    <span class="nav-label">Consents</span>
+                </a>
             </li>
-
             <li ng-class="{active: $state.includes('fe.provider')}">
-                <a ui-sref="fe.provider.list"><i class="fa fa-user-md"></i> <span class="nav-label">Providers</span></a>
+                <a ui-sref="fe.provider.list">
+                    <i class="fa fa-user-md"></i>
+                    <span class="nav-label">Providers</span>
+                </a>
             </li>
-
             <li ng-class="{active: $state.includes('fe.medicaldocuments')}">
-                <a ui-sref="fe.medicaldocuments.info"><i class="fa fa-folder-open"></i> <span class="nav-label">Medical Documents</span></a>
+                <a ui-sref="fe.medicaldocuments.info">
+                    <i class="fa fa-folder-open"></i>
+                    <span class="nav-label">Medical Documents</span>
+                </a>
             </li>
-
             <li ng-class="{active: $state.includes('fe.activity')}">
-                <a ui-sref="fe.activity.list"><i class="fa fa-clock-o"></i> <span
-                        class="nav-label">Activity History</span></a>
+                <a ui-sref="fe.activity.list">
+                    <i class="fa fa-clock-o"></i>
+                    <span class="nav-label">Activity History</span>
+                </a>
             </li>
-
             <li ng-class="{active: $state.includes('fe.patient')}">
-                <a ui-sref="fe.patient.healthinformation"><i class="fa fa-user-md"></i> <span class="nav-label">Health Information</span></a>
+                <a ui-sref="fe.patient.healthinformation">
+                    <i class="fa fa-user-md"></i>
+                    <span class="nav-label">Health Information</span>
+                </a>
             </li>
         </ul>
     </div>
