--- a/client/app/layout/topNavbar.html
+++ b/client/app/layout/topNavbar.html
@@ -1,5 +1,6 @@
-
-<nav class="navbar navbar-fixed-top height-55 gray-bg border-bottom m-b-none" role="navigation" ng-class="{'margin-left-220': AppVm.togglebar}">
+<nav class="navbar navbar-fixed-top height-55 gray-bg border-bottom m-b-none"
+     role="navigation"
+     ng-class="{'margin-left-220': AppVm.togglebar}">
     <div class="container-fluid">
         <div class="row ">
             <div class="col-sm-12">
@@ -10,14 +11,11 @@
                     <div class="m-t-sm m-b-sm m-r inline">
                         <c2s-oauth-logout></c2s-oauth-logout>
                     </div>
-
                     <div class="m-t-sm m-b-sm m-r inline">
                         <img class="hidden-xs" src="assets/img/c2s.png" alt="Consent 2 Share">
                         <img class="visible-xs-inline" src="assets/img/c2s_xs.png" alt="c2s logo">
                     </div>
-
                 </div>
-
             </div>
         </div>
     </div>
