Minor edit to Main.Less file to match admin portal version.
#10926: As a developer, I will have prepared admin-portal-ui,  patient-portal-ui code to make it more deployable by community member (HIE)

--- a/client/less/Main.less
+++ b/client/less/Main.less
@@ -279,7 +279,7 @@ body.mini-navbar .nav-header {
 /* End of Color Schemes */
 
 /* Components */
-.pp-activation-button {
+.c2s-activation-button {
   position: absolute;
   top: 1px;
   right: 13px;
