Create Logout Angular 2 component
#12133 - As a developer, I will have implemented Angular 2 with Typescript in the PP–UI

--- a/client/app/layout/topNavbar.html
+++ b/client/app/layout/topNavbar.html
@@ -9,7 +9,7 @@
                 </div>
                 <div class="pull-right">
                     <div class="m-t-sm m-b-sm m-r inline">
-                        <c2s-oauth-logout></c2s-oauth-logout>
+                        <c2s-logout></c2s-logout>
                     </div>
                     <div class="m-t-sm m-b-sm m-r inline">
                         <c2s-top-navbar-logo></c2s-top-navbar-logo>
