--- a/client/app/layout/footer.html
+++ b/client/app/layout/footer.html
@@ -1,5 +1,5 @@
 <div class="footer">
     <div>
-        <strong>Copyright</strong> FEI Systems &copy; {{AppVm.currentDate}}
+        <strong>{{"COPYRIGHT" | translate}}</strong> {{"FEI_SYSTEM" | translate}} &copy; {{AppVm.currentDate}}
     </div>
 </div>
